<resources>
    <string name="app_name">Sell Smartly</string>
    <string name="title_welcome_page">Hello! \nWelcome to Story App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="have_account">Dont have an account?</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="input_name">Enter your name</string>
    <string name="input_email">Enter your email</string>
    <string name="create_password">Create Password</string>


    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="enter_description">Enter description here...</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="retry">Try Again\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>